frontend/mp3-frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp3-frontend
  labels:
    app: mp3-frontend
spec:
  type: ClusterIP
  selector:
    app: mp3-frontend
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
